[package]
name = "beancount-parser"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Core beancount parsing logic."

[lib]
crate-type = ["lib"]

[dependencies]
tree-sitter = {version = "0.26", optional = true}
beancount-tree-sitter = {path = "../tree-sitter/",optional = true}
anyhow = "1.0.100"
serde_json = { workspace = true }
smallvec = { workspace = true }
chrono = { version = "0.4.38", default-features = false }
rust_decimal = "1.36.0"
path-clean = "1.0.1"
chumsky = "0.12.0"

[features]
default = ["file-parser"]
file-parser = []
tree-sitter = ["dep:beancount-tree-sitter","dep:tree-sitter"]

[dev-dependencies]
similar = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "transaction"
harness = false
